--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ disallow_untyped_defs = true
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
+pythonpath = ["src"]
 python_files = [
     "test_*.py",
     "*_test.py",
